[API-700] Clean up clubs endpoints
I added sanitized responses for all clubs endpoints, removed the deprecated `clubs/id/announcements` endpoint from the swagger spec altogether, and fixed little english nits along the way. I also noticed a bug in the model that's being returned in the `clubs/id/leave` endpoint, which I documented in [API-708](https://strava.atlassian.net/browse/API-708).

Completes [API-700](https://strava.atlassian.net/browse/API-700)

--- a/codegen/src/main/resources/strava-html/reference.mustache
+++ b/codegen/src/main/resources/strava-html/reference.mustache
@@ -122,7 +122,7 @@ type = "reference"
                           {{/responses}}
                           <tr>
                             <td>HTTP code 4xx, 5xx</td>
-                            <td>a <a href="#api-models-Fault">Fault</a> describing the reason for the error.</td>
+                            <td>A <a href="#api-models-Fault">Fault</a> describing the reason for the error.</td>
                           </tr>
                         </table>
                       </article>
